# flask-stats

./: .env  .gitignore  APIclient.py  Pipfile  README.md  pyproject.toml  stats_CLI.py
flask_stats/: APIclient.py  __init__.py  stats.py  stats_CLI.py
flask_stats.egg-info/: PKG-INFO  SOURCES.txt
flask_stats/templates/: base.html
flaskr-stats/: stats.py
flaskr-stats/templates/: base.html
tests/: test_stats.py
