[project]
name = "flask-stats"
version = "1.0.0"
description = "A Flask web app that serves as an Invenio statistics dashboard for Humanities Commons."
readme = "README.rst"
license = {text = "BSD-3-Clause"}
maintainers = [{name = "Cassie Lem", email = "lemcassa@msu.edu"}]
dependencies = [
    "flask",
]

[project.urls]
Documentation = "https://flask.palletsprojects.com/tutorial/"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["flask_stats", "tests"]

[tool.ruff]
src = ["src"]